# TSEE

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile-old  README.md  TODO.md
src/: client.c  editor.c  events.c  game.c  gameObj.c  ini.c  main.c  main.cpp  main.h  main.hpp  mainMenu.c  maps.c  menu.c  player.c  settings.c  text.c  toast.c  tsee.c  tsee.dxg  tsee_animation.c  tsee_array.c  tsee_events.c  tsee_image.c  tsee_input.c  tsee_logging.c  tsee_map.c  tsee_objects.c  tsee_parallax.c  tsee_rendering.c  tsee_safety.c  tsee_settings.c  tsee_text.c  tsee_ui.c
src/docs/: annotated.html  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000003.html  dir_000000_000004.html  dir_000000_000005.html  dir_000000_000006.html  dir_000000_000007.html  dir_000000_000008.html  dir_000000_000009.html  dir_000000_000010.html  dir_25a968707970659825c7c57ead1c5ac7.html  dir_25a968707970659825c7c57ead1c5ac7_dep.md5  dir_4515d7ce14b8ee11a050941408aad08d.html  dir_4515d7ce14b8ee11a050941408aad08d_dep.md5  dir_91037115ae2d334e7436795e8d17f35b.html  dir_91037115ae2d334e7436795e8d17f35b_dep.md5  dir_997231b149ed49024cdae5185fcb5505.html  dir_997231b149ed49024cdae5185fcb5505_dep.md5  dir_9c2d118b5a76e6fb3e369ec02f3b619f.html  dir_9c2d118b5a76e6fb3e369ec02f3b619f_dep.md5  dir_9e2d8ed8d8f6d9f72590f61d4c318ad1.html  dir_9e2d8ed8d8f6d9f72590f61d4c318ad1_dep.md5  dir_b8d1bb626b7e5fad08b2890e6304ea44.html  dir_b8d1bb626b7e5fad08b2890e6304ea44_dep.md5  dir_d06cb7646f247166285d31a77f129433.html  dir_d06cb7646f247166285d31a77f129433_dep.md5  dir_d41e86bc15f0f20dc6948d4d90ea1234.html  dir_d41e86bc15f0f20dc6948d4d90ea1234_dep.md5  dir_f4f254eb883145a1f9cfef666424d220.html  dir_f4f254eb883145a1f9cfef666424d220_dep.md5  dir_fc4790fd54a9c3df091309d7a3518347.html  dir_fc4790fd54a9c3df091309d7a3518347_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+9 more)
src/docs/d0/d05/: structTSEE__ResManager-members.html
src/docs/d0/d11/: structTSEE__Events-members.html
src/docs/d0/d1a/: structTSEE__Array-members.html
src/docs/d0/d1e/: structTSEE__Vec2.html
src/docs/d0/d2d/: tsee__animation_8c__incl.md5
src/docs/d0/d55/: structTSEE__Physics__Data.html
src/docs/d0/d63/: tsee__events_8c__incl.md5
src/docs/d0/d6f/: structTSEE__Parallax__Data-members.html
src/docs/d0/da0/: structTSEE__Toolbar__Child.html
src/docs/d0/dea/: tsee__array_8c.html
src/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  (+21 more)
src/ext/: tinyfiledialogs.c
src/include/: client.h  events.h  game.h  gameObj.h  main.h  mainMenu.h  maps.h  menu.h  player.h  settings.h  text.h  toast.h  tsee.h  tsee_functions.h  tsee_include.h  tsee_types.h
src/tsee/: todo.md  tsee.cpp  tsee.h  tsee.hpp
src/tsee/UI/: tsee_ui.c  tsee_ui_functions.h  tsee_ui_types.h
src/tsee/events/: tsee_event_functions.h  tsee_event_types.h  tsee_events.c  tsee_input.c
src/tsee/ext/: tinyfiledialogs.c  tinyfiledialogs.h
src/tsee/image/: image.cpp  tsee_animation.c  tsee_animation_functions.h  tsee_animation_types.h  tsee_image.c  tsee_image_functions.h  tsee_image_types.h  tsee_rendering.c
src/tsee/include/: image.hpp  log.hpp  resource.hpp  types.hpp  window.hpp
src/tsee/log/: log.cpp
src/tsee/main/: tsee.c  tsee_functions.h  tsee_settings.c  tsee_types.h
src/tsee/maps/: tsee_map.c  tsee_map_functions.h
src/tsee/objects/: tsee_attributes.c  tsee_font.c  tsee_object_functions.h  tsee_object_types.h  tsee_objects.c  tsee_parallax.c  tsee_text.c
src/tsee/physics/: tsee_physics.c  tsee_physics_functions.h  tsee_physics_types.h
src/tsee/player/: tsee_player.c  tsee_player_functions.h  tsee_player_types.h
src/tsee/resource/: resource.cpp
src/tsee/resources/: tsee_resource_manager.c  tsee_resources_functions.h  tsee_resources_types.h
src/tsee/sprite/: image.cpp  sprite.cpp
src/tsee/util/: tsee_array.c  tsee_mat.c  tsee_safety.c  tsee_util_functions.h  tsee_util_types.h  tsee_vec.c
src/tsee/window/: window.cpp
(+152 files in other folders)
